src/test/deca/syntax/invalid/test_synt1.deca
 //Resultat:
//      Erreur Contextuelle : " manquante
{
	if ( 3 && 5 ){
	   println(this text shouldn't be printed");
	}
}
